Fix quote alignment

--- a/templates/components/quote/quote.scss
+++ b/templates/components/quote/quote.scss
@@ -6,7 +6,7 @@
     // }
 
     blockquote {
-        padding: $baseline-offset align(5.569pt) align(5.621pt) align(5.621pt);
+        padding: $baseline-offset align(5.45pt) align(5.621pt) align(5.621pt);
 
         &:before {
             content: '–';
@@ -15,7 +15,7 @@
             font-size: 47pt;
             line-height: 0.93em;
             color: #FFF;
-            height: 52.667px;
+            height: 51.667px;
             text-indent: -1.3px;
 
             // @media print {
